# EasyPass

./: README.md  meson.build  org.example.App.json
data/: org.example.App.appdata.xml.in  org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: crypto.vala  easypass.gresource.xml  main.vala  meson.build  window.vala
src/vapi/: gcrypt.vapi
